@@ -29,10 +29,11 @@ instance Arbitrary Path where
 
 test build = do
     internalTest
+    let norm = filter (/= ".") . split isPathSeparator
     let f b pat file = do
             assertBool (b == (pat ?== file)) $ show pat ++ " ?== " ++ show file ++ "\nEXPECTED: " ++ show b
             assertBool (b == (pat `walker` file)) $ show pat ++ " `walker` " ++ show file ++ "\nEXPECTED: " ++ show b
-            when b $ assertBool (toStandard (substitute (extract pat file) pat) == toStandard file) $
+            when b $ assertBool (norm (substitute (extract pat file) pat) == norm file) $
                 "FAILED substitute/extract property\nPattern: " ++ show pat ++ "\nFile: " ++ show file ++ "\n" ++
                 "Extracted: " ++ show (extract pat file) ++ "\nSubstitute: " ++ show (substitute (extract pat file) pat)
 
@@ -130,6 +131,13 @@ test build = do
     f (not isWindows) "**" "C:\\drive"
     f (not isWindows) "**" "C:drive"
 
+    -- We support ignoring '.' values in FilePath as they are inserted by @filepath@ a lot
+    f True "./file" "file"
+    f True ("" </> "file") "file"
+    f True "foo/./bar" "foo/bar"
+    f True "foo/./bar" "foo/./bar"
+    f False "foo/./bar" "foo/bob"
+
     filePattern "**/*.c" "test.txt" === Nothing
     filePattern "**/*.c" "foo.c" === Just ["","foo"]
     filePattern "**/*.c" "bar/baz/foo.c" === Just ["bar/baz/","foo"]
@@ -201,6 +209,7 @@ walker :: FilePattern -> FilePath -> Bool
 walker a b | isRelativePattern a, not $ isRelativePath b = False
 walker a b = f (split isPathSeparator b) $ snd $ walk [a]
     where
+        f (".":xs) w = f xs w
         f (x:xs) (Walk op) = f (x:xs) $ WalkTo $ op [x]
         f [x]    (WalkTo (file, dir)) = x `elem` file
         f (x:xs) (WalkTo (file, dir)) | Just w <- lookup x dir = f xs w
