@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    #517, ignore ./ in FilePattern
     Require extra-1.5.3
     #499, add a filePattern function, like ?== but with the matches
     #474, never spawn user actions unmasked
